# rpm

./: Cargo.toml  README.md  ROADMAP.md
example/: package.json  rpm-lock.json
scripts/: install.ps1  install.sh
src/: installer.rs  main.rs  manager.rs  output.rs  registry.rs  types.rs  workspace.rs
